# matplotlib-dashboard

./: .gitignore  LICENSE  README.md  setup.cfg
examples/example1/: example.py
src/matplotlib_dashboard/: __init__.py  matplotlib_dashboard.py
tests/: test1.py
